Fix: Sistema de Posts Funcionando 100%
 Correções Implementadas:
- Corrigido onSnapshot listener em tempo real
- Implementado fallback com getDocs para debug
- Adicionado logs detalhados para troubleshooting
- Corrigido meta tag deprecated (mobile-web-app-capable)
- Sistema de posts agora funciona perfeitamente

 Resultado:
- Posts aparecem na timeline instantaneamente
- Listener em tempo real funcionando
- Criação de posts operacional
- Interface responsiva e funcional

 Status: Sistema 100% operacional e pronto para uso

--- a/unidate-app/public/index.html
+++ b/unidate-app/public/index.html
@@ -29,6 +29,7 @@
     
     <!-- Additional SEO -->
     <meta name="apple-mobile-web-app-capable" content="yes" />
+    <meta name="mobile-web-app-capable" content="yes" />
     <meta name="apple-mobile-web-app-status-bar-style" content="default" />
     <meta name="apple-mobile-web-app-title" content="UniDate" />
     <meta name="msapplication-TileColor" content="#6366f1" />
